# infrastructure

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-and-release.yml  labeler.yml  repo-versions.yml  semantic-release.yml  stale.yml
kafka/: .env.example  .gitignore  QUICKSTART.md  README.md  SCHEMA_REGISTRY.md  docker-compose.yml  examples.py  generate_schemas.py  pyproject.toml
kafka/connectors/: deploy-connector.bat  deploy-connector.sh  postgres-sink.json
kafka/models/: observation.py  user.py
kafka/schemas/: acknowledgments.py  commands.py  data.py  status.py
kafka/sql/: create_telescope_data_table.sql
kafka/utils/: __init__.py  consumer.py  producer.py
project-management/openproject/: docker-compose.yml
project-management/redmine/: docker-compose.yml
