[project]
name = "kafka-schemas"
version = "0.1.0"
description = "Kafka message schemas and utilities for Astro BEAM project"
readme = "README.md"
authors = [
    { name = "Hercules Konsoulas", email = "dyka3773@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiokafka[snappy]>=0.12.0",
    "dataclasses-avroschema>=0.66.1",
    "avro-python3>=1.10.2",
    "sqlmodel>=0.0.27",
    "pydantic[email]>=2.12.4",
    "httpx>=0.27.0",
]
